--- a/scripts/package.json
+++ b/scripts/package.json
@@ -2,6 +2,7 @@
   "name": "scripts",
   "version": "1.0.0",
   "description": "",
+	"type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
+    "gray-matter": "^4.0.3",
     "marked": "^7.0.5"
   }
 }
