--- a/spa/sync/package.json
+++ b/spa/sync/package.json
@@ -19,6 +19,7 @@
     "@fast-check/vitest": "^0.0.3",
     "jsdom": "^21.1.1",
     "vite": "^4.2.0",
+    "vite-plugin-singlefile": "^0.13.5",
     "vite-plugin-solid": "^2.6.1",
     "vitest": "^0.34.2"
   }
