--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.9",
     "glob": "^10.3.10",
     "gray-matter": "^4.0.3",
-    "marked": "^7.0.5"
+    "marked": "^7.0.5",
+    "sharp-phash": "^2.1.0"
   }
 }
