--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+		"build": "node index.js build",
+		"clean": "node index.js clean"
   },
   "author": "",
   "license": "ISC",
